--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <i class="fa-brands fa-twitter"></i>
         </a>
       </div>
-      <p>Developed by Dhaneshwar for FSD Training</p>
+      <p>Developed by Vaibhavi Srivastava</p>
     </div>
 
     <script
