--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css"/>
   </head>
   <body>
     <!-- top banner -->
@@ -145,7 +146,7 @@
     </section>
 
     <section class="big-features-section">
-      <div class="container flex big-feature-container">
+      <div class="container flex big-feature-container" id="spl-cont>
         <div class="feature-desc flex">
           <h4>Effortless validation for</h4>
           <h3>Design professionals</h3>
